# syntra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_feedback.yml  feature_request.yml  question.yml  routing_feedback.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: benchmark.py  vcr.py
docs/: BROWSER_SETUP.md  COMMANDS.md  CONFIG.md  GUIDE.md  LABELS.md  PUBLIC_BETA_CHECKLIST.md  RELEASE_TEMPLATE.md  RELEASING.md  REPOSITORY_SETUP.md  SECURITY.md  SKILLS_AND_PLUGINS.md
docs/animations/: README.md  pacman_compaction.py
docs/community/discussions/: BETA_FEEDBACK.md  CONTRIBUTOR_TRIAGE.md  WELCOME.md
docs/features/: MODEL_SELECTION.md  PROVIDERS_CACHING_MCP.md  QUALITY_AND_REVIEW.md  README.md  RELIABILITY.md  TOOLS_AND_SAFETY.md
syntra/: __init__.py  __main__.py
syntra/cli/: inline_tui.py  main.py  tui.py  tui2.py
syntra/core/: aa_refresh.py  ab.py  ability.py  access_modes.py  action_feed.py  activity_tree.py  agent_loop.py  benchmark.py  brief_cache.py  browser.py  browser_preview.py  capability_cache.py  catalog.py  chips.py  clipboard.py  commands.py  compaction.py  compare_view.py  completion.py  context.py  continuation.py  cost_modes.py  dead_keys.py  edits.py  errors.py  execpolicy.py  filelock.py  files.py  folder_trust.py  frecency.py  free_presets.py  fsutil.py  fuzzy.py  guardian.py  handoff.py  healthcheck.py  highlight.py  hook_engine.py  hooks.py  incidents.py  (+88 more)
syntra/core/prompts/: __init__.py  executor.md  planner.md  researcher.md  reviewer.md  reviewer_agent.md  reviewer_research.md
syntra/core/widgets/: __init__.py  activity_log.py  activity_tree_widget.py  agent_status.py  chat.py  diff_viewer.py  file_tree.py  file_viewer.py  git_status.py  minimap.py  model_router.py  run_output.py  shortcuts.py  token_monitor.py  workspace_overview.py
syntra/data/: aa_catalog.json  providers.example.json
syntra/providers/: openai_compat.py
syntra/skills/brainstorm/: SKILL.md
syntra/skills/chat/: SKILL.md
syntra/skills/code-simplify/: SKILL.md
syntra/skills/coding/: SKILL.md
syntra/skills/debug/: SKILL.md
syntra/skills/dispatch-agents/: SKILL.md
(+11 files in other folders)
